# url-linker

./: .gitignore  Cargo.toml  README.md
resources/: migrate_down.sql  migrate_up.sql
resources/swagger/: index.html  swagger-initializer.js  swagger.json  swagger.yaml
resources/web/: index.html
resources/web/assets/: index.042546ed.js  index.4023607f.js  index.5a263aea.js  index.64b61cf2.js  index.7a21308a.js  index.eb996526.js  vendor.498e8e1e.js  vendor.b76b00df.js  vendor.e04ae5bf.js  vendor_react.3ffc3dab.js  vendor_react.bd3845a2.js
src/: config.rs  main.rs
src/config/: database.rs  environment.rs  mod.rs
src/controllers/: api.rs  cors.rs  mod.rs  query.rs
src/controllers/api/: mod.rs  url_crud.rs  urls.rs  users.rs
src/controllers/guards/: admin.rs  admin_api_token.rs  api_user.rs  mod.rs  url_service.rs  user.rs  user_service.rs
src/controllers/responders/: url.rs  user.rs
src/controllers/types/request/: admin_api_token.rs  mod.rs  url.rs  user.rs
src/controllers/types/response/: url.rs  user.rs
src/errors/: mod.rs  url.rs  user.rs
src/services/: mod.rs  password.rs  url.rs  user.rs
src/services/types/: admin.rs  mod.rs  url.rs  user.rs
src/types/: mod.rs  url.rs
src/utils/: mod.rs
